--- a/ProductClientHub.API/ProductClientHub.API.csproj
+++ b/ProductClientHub.API/ProductClientHub.API.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductClientHub.Communication\ProductClientHub.Communication.csproj" />
+    <ProjectReference Include="..\ProductClientHub.Exceptions\ProductClientHub.Exceptions.csproj" />
+  </ItemGroup>
+
 </Project>
